objects/Participants__c.object
<CustomObject>
    <fields>
        <fullName>Business_activities__c</fullName>
        <label>Business Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create invoices</fullName>
                </value>
                <value>
                    <fullName>Create estimates</fullName>
                </value>
                <value>
                    <fullName>Create sales receipts</fullName>
                </value>
                <value>
                    <fullName>Process payroll</fullName>
                </value>
                <value>
                    <fullName>Track income</fullName>
                </value>
                <value>
                    <fullName>Track expenses</fullName>
                </value>
                <value>
                    <fullName>Track customer information</fullName>
                </value>
                <value>
                    <fullName>Collect Payments</fullName>
                    <isActive>false</isActive>
                    <label>Collect Payments</label>
                </value>
                <value>
                    <fullName>Get a Loan/Borrow Money</fullName>
                    <isActive>false</isActive>
                    <label>Get a Loan/Borrow Money</label>
                </value>
                <value>
                    <fullName>Grow customer base</fullName>
                    <isActive>false</isActive>
                    <label>Grow customer base</label>
                </value>
                <value>
                    <fullName>Manage 1099 contractor/vendors/suppliers</fullName>
                    <isActive>false</isActive>
                    <label>Manage 1099 contractor/vendors/suppliers</label>
                </value>
                <value>
                    <fullName>Manage Employees</fullName>
                    <isActive>false</isActive>
                    <label>Manage Employees</label>
                </value>
                <value>
                    <fullName>Manage Sales/VAT/GST Tax</fullName>
                    <isActive>false</isActive>
                    <label>Manage Sales/VAT/GST Tax</label>
                </value>
                <value>
                    <fullName>Manage and collect membership dues</fullName>
                    <isActive>false</isActive>
                    <label>Manage and collect membership dues</label>
                </value>
                <value>
                    <fullName>Manage budgets &amp; forecasting</fullName>
                    <isActive>false</isActive>
                    <label>Manage budgets &amp; forecasting</label>
                </value>
                <value>
                    <fullName>Managing Inventory</fullName>
                    <isActive>false</isActive>
                    <label>Managing Inventory</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>Order Supplies</fullName>
                    <isActive>false</isActive>
                    <label>Order Supplies</label>
                </value>
                <value>
                    <fullName>Pay bills</fullName>
                    <isActive>false</isActive>
                    <label>Pay bills</label>
                </value>
                <value>
                    <fullName>Process Payments</fullName>
                    <isActive>false</isActive>
                    <label>Process Payments</label>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                    <isActive>false</isActive>
                    <label>Project Management</label>
                </value>
                <value>
                    <fullName>Recruit members</fullName>
                    <isActive>false</isActive>
                    <label>Recruit members</label>
                </value>
                <value>
                    <fullName>Run Reports</fullName>
                    <isActive>false</isActive>
                    <label>Run Reports</label>
                </value>
                <value>
                    <fullName>Schedule appointments</fullName>
                    <isActive>false</isActive>
                    <label>Schedule appointments</label>
                </value>
                <value>
                    <fullName>Sell Products</fullName>
                    <isActive>false</isActive>
                    <label>Sell Products</label>
                </value>
                <value>
                    <fullName>Ship &amp; Fulfill Orders</fullName>
                    <isActive>false</isActive>
                    <label>Ship &amp; Fulfill Orders</label>
                </value>
                <value>
                    <fullName>Time Tracking</fullName>
                    <isActive>false</isActive>
                    <label>Time Tracking</label>
                </value>
                <value>
                    <fullName>Track mileage</fullName>
                    <isActive>false</isActive>
                    <label>Track mileage</label>
                </value>
                <value>
                    <fullName>Track sales</fullName>
                    <isActive>false</isActive>
                    <label>Track sales</label>
                </value>
                <value>
                    <fullName>Track time</fullName>
                    <isActive>false</isActive>
                    <label>Track time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_returns__c</fullName>
        <label>Business returns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-25</fullName>
                </value>
                <value>
                    <fullName>26-50</fullName>
                </value>
                <value>
                    <fullName>51-75</fullName>
                </value>
                <value>
                    <fullName>76-100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_website_SE__c</fullName>
        <label>Business website (SE)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_website_SMB__c</fullName>
        <label>Business website (SMB)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_products__c</fullName>
        <label>Certified products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuickBooks Desktop</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_Now_Notes__c</fullName>
        <label>Connect Now Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_clients__c</fullName>
        <label>Consumer clients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>Less than 10%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_1__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burma</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cabo Verde</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_marital_status__c</fullName>
        <label>Marital status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Intuit Employee</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Small Business Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customers_on_Tap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connect Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe_work_as_a_Self_Employed_Worker__c</fullName>
        <label>Description of work as Self-Employed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description best fits you</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Freelance Business Owner</fullName>
                </value>
                <value>
                    <fullName>Full time traditional job with project based work here and there</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor</fullName>
                </value>
                <value>
                    <fullName>On-demand worker, One or more traditional part time jobs</fullName>
                </value>
                <value>
                    <fullName>Temporary Worker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_best_fits_you__c</fullName>
        <label>What Description best fits you?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Freelance Business Owner</fullName>
                </value>
                <value>
                    <fullName>Full time traditional job with project based work here and there</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor</fullName>
                </value>
                <value>
                    <fullName>On-demand worker, One or more traditional part time jobs</fullName>
                </value>
                <value>
                    <fullName>Temporary Worker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_work__c</fullName>
        <label>Description of work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developed_apps_for_other_companies__c</fullName>
        <label>Developed apps for other companies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developed_on_other_platforms__c</fullName>
        <label>Developed on other platforms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Xero</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_participant_fit_your_requirements__c</fullName>
        <label>Did participant fit your requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_they_fit_the_requirements_requested__c</fullName>
        <label>Did they fit the requirements requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty_keeping_up_with_bills__c</fullName>
        <label>Difficulty keeping up with bills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_dependents__c</fullName>
        <label>Dependents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_QuickBooks_Online_Accountant__c</fullName>
        <label>Do you use QuickBooks Online Accountant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_an_accountant__c</fullName>
        <label>Do you use an accountant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_using_Turbo_Tax__c</fullName>
        <label>How long have you used TurboTax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This was the first time I used TurboTax (First time TT user)</fullName>
                </value>
                <value>
                    <fullName>I have used TurboTax for the last 2 years (2 years)</fullName>
                </value>
                <value>
                    <fullName>I have used TurboTax for 3-4 years (3-4 years)</fullName>
                </value>
                <value>
                    <fullName>I have used TurboTax for 5 years or more (5 or more years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earning_income_from_a_side_job__c</fullName>
        <label>Earning income from a side job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employees_with_1099_contractors__c</fullName>
        <label>Total 1099 contractors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-4</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>11-15</fullName>
                </value>
                <value>
                    <fullName>16-20</fullName>
                </value>
                <value>
                    <fullName>21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_status__c</fullName>
        <label>Employment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed full-time</fullName>
                </value>
                <value>
                    <fullName>Employed part-time</fullName>
                </value>
                <value>
                    <fullName>Student working full-time</fullName>
                </value>
                <value>
                    <fullName>Student working part-time</fullName>
                </value>
                <value>
                    <fullName>Student not working</fullName>
                </value>
                <value>
                    <fullName>Unemployed and looking</fullName>
                </value>
                <value>
                    <fullName>Other - Please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Features_do_you_use_in_your_QuickBooks__c</fullName>
        <label>Features used in QuickBooks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create Invoices</fullName>
                </value>
                <value>
                    <fullName>Create Estimates</fullName>
                </value>
                <value>
                    <fullName>Create Sales Receipts</fullName>
                </value>
                <value>
                    <fullName>Track Income</fullName>
                </value>
                <value>
                    <fullName>Track Expenses</fullName>
                </value>
                <value>
                    <fullName>Track Customer Information (such as name, contact information, how much the customer owes)</fullName>
                </value>
                <value>
                    <fullName>Run Reports</fullName>
                </value>
                <value>
                    <fullName>Find &amp; Search</fullName>
                </value>
                <value>
                    <fullName>Modifying Credit Card changes</fullName>
                </value>
                <value>
                    <fullName>Creating invoices</fullName>
                </value>
                <value>
                    <fullName>Setup Users &amp; Roles</fullName>
                </value>
                <value>
                    <fullName>All of the above</fullName>
                </value>
                <value>
                    <fullName>I do not own a business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filing_method_this_year__c</fullName>
        <label>Filing method this year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Karma</fullName>
                </value>
                <value>
                    <fullName>Family or friend</fullName>
                </value>
                <value>
                    <fullName>H&amp;R Block</fullName>
                </value>
                <value>
                    <fullName>Manual/Pen and Paper</fullName>
                </value>
                <value>
                    <fullName>Tax Professional/Accountant/CPA</fullName>
                </value>
                <value>
                    <fullName>Tax Store</fullName>
                </value>
                <value>
                    <fullName>TaxAct</fullName>
                </value>
                <value>
                    <fullName>TaxSlayer</fullName>
                </value>
                <value>
                    <fullName>TurboTax Desktop</fullName>
                </value>
                <value>
                    <fullName>TurboTax Mobile</fullName>
                </value>
                <value>
                    <fullName>TurboTax Online</fullName>
                </value>
                <value>
                    <fullName>Other Tax Software</fullName>
                </value>
                <value>
                    <fullName>I did not file/do not plan to file personal taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_name__c</fullName>
        <label>Firm name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Following_life_events_occurred_in_2015__c</fullName>
        <label>Life Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Got married</fullName>
                </value>
                <value>
                    <fullName>Got divorced</fullName>
                </value>
                <value>
                    <fullName>Earned unemployment income</fullName>
                </value>
                <value>
                    <fullName>Earned independent contract/self-employment income</fullName>
                </value>
                <value>
                    <fullName>Changed jobs</fullName>
                </value>
                <value>
                    <fullName>Moved to another state</fullName>
                </value>
                <value>
                    <fullName>Health insurance through the affordable care act</fullName>
                </value>
                <value>
                    <fullName>Didn’t have health insurance for any part of the year</fullName>
                </value>
                <value>
                    <fullName>Bought a new house</fullName>
                </value>
                <value>
                    <fullName>Had a child</fullName>
                </value>
                <value>
                    <fullName>Medical expenses over $1000</fullName>
                </value>
                <value>
                    <fullName>One of my children became independent</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
                <value>
                    <fullName>Change jobs</fullName>
                </value>
                <value>
                    <fullName>Don’t have health insurance for any part of the year</fullName>
                </value>
                <value>
                    <fullName>Earning independent contract/self-employment income</fullName>
                </value>
                <value>
                    <fullName>Earning unemployment income</fullName>
                </value>
                <value>
                    <fullName>Get a new house</fullName>
                </value>
                <value>
                    <fullName>Getting divorced</fullName>
                </value>
                <value>
                    <fullName>Getting married</fullName>
                </value>
                <value>
                    <fullName>Got a new house</fullName>
                </value>
                <value>
                    <fullName>Had a new child (can be another child)</fullName>
                </value>
                <value>
                    <fullName>Have health insurance through the affordable care act</fullName>
                </value>
                <value>
                    <fullName>Having a new child (can be another child)</fullName>
                </value>
                <value>
                    <fullName>Having medical expenses</fullName>
                </value>
                <value>
                    <fullName>Having shared custody of my child(ren)</fullName>
                </value>
                <value>
                    <fullName>Medical expenses</fullName>
                </value>
                <value>
                    <fullName>Move to another state</fullName>
                </value>
                <value>
                    <fullName>One of my children is become independent</fullName>
                </value>
                <value>
                    <fullName>One of my children is becoming independent (getting a job, moving out, turned 24, etc)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_accessing_Mint__c</fullName>
        <label>Frequency of accessing Mint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Infrequently</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name_Calc__c</fullName>
        <formula>Name &amp; &quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full_Name_Calc</label>
        <type>Text</type>
    </fields>
</CustomObject>